--- a/index.html
+++ b/index.html
@@ -10,10 +10,58 @@
 
 <body>
 <nav>
-  
+  <div id="name">acm-w @ UD</div><div id="options">events | mentorship | resources | about | join us</div>
 </nav>
 
+<div id="events">
+<h2>Upcoming Events</h2>
+<!--embed Google Calendar here-->
+</div>
 
+<div id="mentorship">
+<h2>Support for the Women in Tech at UD</h2>
+<p>Our chapter has designed a mentorship program to support women in tech-driven majors at the University of Delaware. We generally cater to Computer Science, Information Systems, and Management Information Systems Majors, but we encourage anyone who is interested to apply. Upperclassmen in this program mentor a freshman in their major, give them academic advice, and help them adjust to life at UD during their first year. This program is part of an initiative to create a safe and supportive space for the women in tech at UD and increase retention of our female students in technical majors.</p>
+<button>Get a Mentor</button>
+<button>Become a Mentor</button>
+</div>
+
+<div id="resources">
+<h2>Our Projects</h2>
+<h4>WIT Media</h4>
+<button>Submit Media</button>
+<button>View the List</button>
+<h4>Rate My Prof</h4>
+<button>Submit a Rating</button>
+<button>View the List</button>
+<h4>Meeting Content</h4>
+<!--embed videos and articles from 2019-2020 list here-->
+</div>
+
+<div id="about">
+<h2>2020-2021 Executive Board</h2>
+<div id="exec-board">
+<div id="headshot"></div>
+<h3>Sarah Joyce</h3><h4>Chair</h4>
+<div id="headshot"></div>
+<h3>Bonnie Skiena</h3><h4>Vice Chair</h4>
+<div id="headshot"></div>
+<h3>Caroline Graham</h3><h4>Treasurer</h4>
+<div id="headshot"></div>
+<h3>Erin Wallace</h3><h4>Mentorship Program Coordinator</h4>
+</div>
+<div id="contributors">
+<h2>Website Contributors</h2>
+<!--note: the icons I am using are called fontawesome icons. The fa-2x class in the class tag changes the size of the icon.-->
+<h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+</div>
+</div>
+
+<div id="join">
+<h2>Join Our Chapter</h2>
+</div>
 </body>
 
+<footer>
+coded with <3 by acm-w
+</footer>
 </html>
