some formatting finished

--- a/index.html
+++ b/index.html
@@ -27,32 +27,49 @@
 
 <div id="resources">
 <h2>Our Projects</h2>
-<h4>WIT Media</h4>
+<h3>WIT Media</h3>
 <button>Submit Media</button>
 <button>View the List</button>
-<h4>Rate My Prof</h4>
+<h3>Rate My Prof</h3>
 <button>Submit a Rating</button>
 <button>View the List</button>
-<h4>Meeting Content</h4>
+<h3>Meeting Content</h3>
 <!--embed videos and articles from 2019-2020 list here-->
 </div>
 
 <div id="about">
 <h2>2020-2021 Executive Board</h2>
+
 <div id="exec-board">
+<div id="chair">
+<!--the headshot id will be changed from a box to an image later-->
 <div id="headshot"></div>
 <h3>Sarah Joyce</h3><h4>Chair</h4>
+</div>
+
+<div id="vice-chair">
 <div id="headshot"></div>
 <h3>Bonnie Skiena</h3><h4>Vice Chair</h4>
+</div>
+
+<div id="treasurer">
 <div id="headshot"></div>
 <h3>Caroline Graham</h3><h4>Treasurer</h4>
+</div>
+
+<div id="mentor-coordinator">
 <div id="headshot"></div>
 <h3>Erin Wallace</h3><h4>Mentorship Program Coordinator</h4>
 </div>
+</div>
+
 <div id="contributors">
 <h2>Website Contributors</h2>
 <!--note: the icons I am using are called fontawesome icons. The fa-2x class in the class tag changes the size of the icon.-->
-<h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+<div id="programmer-buttons">
+<div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+<div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+<div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
 </div>
 </div>
 
