getting the buttons started and spacing for mentor buttons

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <div id="mentorship">
 <h2>Support for the Women in Tech at UD</h2>
 <p>Our chapter has designed a mentorship program to support women in tech-driven majors at the University of Delaware. We generally cater to Computer Science, Information Systems, and Management Information Systems Majors, but we encourage anyone who is interested to apply. Upperclassmen in this program mentor a freshman in their major, give them academic advice, and help them adjust to life at UD during their first year. This program is part of an initiative to create a safe and supportive space for the women in tech at UD and increase retention of our female students in technical majors.</p>
-<button>Get a Mentor</button>
-<button>Become a Mentor</button>
+<button class="mentor-button">Get a Mentor</button>
+<button class="mentor-button">Become a Mentor</button>
 </div>
 
 <div id="resources">
