worked on the buttons in the Our Projects area

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
 
 <div id="resources">
 <h2>Our Projects</h2>
+<div class="our-projects">
 <h3>WIT Media</h3>
-<button>Submit Media</button>
-<button>View the List</button>
+<button class="project-button">Submit Media</button>
+<button class="project-button">View the List</button>
+</div>
+<div class="our-projects">
 <h3>Rate My Prof</h3>
-<button>Submit a Rating</button>
-<button>View the List</button>
+<button class="project-button">Submit a Rating</button>
+<button class="project-button">View the List</button>
+</div>
 <h3>Meeting Content</h3>
 <!--embed videos and articles from 2019-2020 list here-->
 </div>
