fixed how the buttons in Our Projects weren't lined up because of the longer text - there might be a better fix though because I used inline styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <button class="project-button">View the List</button>
 </div>
 <div class="our-projects">
-<h3>Rate My Prof</h3>
+<h3 style="margin: 0 0 0 -10px">Rate My Prof</h3>
 <button class="project-button">Submit a Rating</button>
 <button class="project-button">View the List</button>
 </div>
