styled the text and nav, added functionality to nav.

--- a/index.html
+++ b/index.html
@@ -10,65 +10,67 @@
 
 <body>
 <nav>
-  <div id="name">acm-w @ UD</div><div id="options">events | mentorship | resources | about | join us</div>
+  <div id="name">acm-w @ UD</div><div id="options">
+  <a href="#events">events</a> | <a href="#mentorship">mentorship</a> | <a href="#resources">resources</a> | <a href="#about">about</a> | <a href="#join">join us</a>
+  </div>
 </nav>
 
 <div id="events">
-<h2>Upcoming Events</h2>
+<h2 class="heading">Upcoming Events</h2>
 <!--embed Google Calendar here-->
 </div>
 
 <div id="mentorship">
-<h2>Support for the Women in Tech at UD</h2>
+<h2 class="heading">Support for the Women in Tech at UD</h2>
 <p>Our chapter has designed a mentorship program to support women in tech-driven majors at the University of Delaware. We generally cater to Computer Science, Information Systems, and Management Information Systems Majors, but we encourage anyone who is interested to apply. Upperclassmen in this program mentor a freshman in their major, give them academic advice, and help them adjust to life at UD during their first year. This program is part of an initiative to create a safe and supportive space for the women in tech at UD and increase retention of our female students in technical majors.</p>
 <button class="mentor-button">Get a Mentor</button>
 <button class="mentor-button">Become a Mentor</button>
 </div>
 
 <div id="resources">
-<h2>Our Projects</h2>
+<h2 class="heading">Our Projects</h2>
 <div class="our-projects">
-<h3>WIT Media</h3>
+<h3 class="heading">WIT Media</h3>
 <button class="project-button">Submit Media</button>
 <button class="project-button">View the List</button>
 </div>
 <div class="our-projects">
-<h3 style="margin: 0 0 0 -10px">Rate My Prof</h3>
+<h3 class="heading" style="margin: 0 0 0 -10px">Rate My Prof</h3>
 <button class="project-button">Submit a Rating</button>
 <button class="project-button">View the List</button>
 </div>
-<h3>Meeting Content</h3>
+<h2 class="heading">Meeting Content</h2>
 <!--embed videos and articles from 2019-2020 list here-->
 </div>
 
 <div id="about">
-<h2>2020-2021 Executive Board</h2>
+<h2 class="heading">2020-2021 Executive Board</h2>
 
 <div id="exec-board">
 <div id="chair">
 <!--the headshot id will be changed from a box to an image later-->
 <div id="headshot"></div>
-<h3>Sarah Joyce</h3><h4>Chair</h4>
+<h3 class="heading">Sarah Joyce</h3><h4 class="heading">Chair</h4>
 </div>
 
 <div id="vice-chair">
 <div id="headshot"></div>
-<h3>Bonnie Skiena</h3><h4>Vice Chair</h4>
+<h3 class="heading">Bonnie Skiena</h3><h4 class="heading">Vice Chair</h4>
 </div>
 
 <div id="treasurer">
 <div id="headshot"></div>
-<h3>Caroline Graham</h3><h4>Treasurer</h4>
+<h3 class="heading">Caroline Graham</h3><h4 class="heading">Treasurer</h4>
 </div>
 
 <div id="mentor-coordinator">
 <div id="headshot"></div>
-<h3>Erin Wallace</h3><h4>Mentorship Program Coordinator</h4>
+<h3 class="heading">Erin Wallace</h3><h4 class="heading">Mentorship Program Coordinator</h4>
 </div>
 </div>
 
 <div id="contributors">
-<h2>Website Contributors</h2>
+<h2 class="heading">Website Contributors</h2>
 <!--note: the icons I am using are called fontawesome icons. The fa-2x class in the class tag changes the size of the icon.-->
 <div id="programmer-buttons">
 <div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
@@ -78,7 +80,7 @@
 </div>
 
 <div id="join">
-<h2>Join Our Chapter</h2>
+<h2 class="heading">Join Our Chapter</h2>
 </div>
 </body>
 
