--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang ="en">
 
+
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
 <!--<script src="scripts/namehere.js"></script>-->
 <title>ACM-W at UD</title>
