added carousel to display meeting content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
-<!--<script src="scripts/namehere.js"></script>-->
+<link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
+<script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 <title>ACM-W at UD</title>
 </head>
 
@@ -25,24 +26,33 @@
 <div id="mentorship">
 <h2 class="heading">Support for the Women in Tech at UD</h2>
 <p>Our chapter has designed a mentorship program to support women in tech-driven majors at the University of Delaware. We generally cater to Computer Science, Information Systems, and Management Information Systems Majors, but we encourage anyone who is interested to apply. Upperclassmen in this program mentor a freshman in their major, give them academic advice, and help them adjust to life at UD during their first year. This program is part of an initiative to create a safe and supportive space for the women in tech at UD and increase retention of our female students in technical majors.</p>
-<button class="mentor-button">Get a Mentor</button>
-<button class="mentor-button">Become a Mentor</button>
+<a href="https://forms.gle/qBjEBZUMLRzHdqJU7"><button class="mentor-button">Get a Mentor</button></a>
+<a href="https://forms.gle/nYj4bWPKAvMkZmGBA"><button class="mentor-button">Become a Mentor</button></a>
 </div>
 
 <div id="resources">
 <h2 class="heading">Our Projects</h2>
 <div class="our-projects">
 <h3 class="heading">WIT Media</h3>
-<button class="project-button">Submit Media</button>
-<button class="project-button">View the List</button>
+<a href="https://forms.gle/j3pQkT7xai8doqMMA"><button class="project-button">Submit Media</button></a>
+<a href="https://docs.google.com/document/d/1VVrZybqxFiXfx4ktajbqoNahKZui108HwzNN2uQ_kk8/edit?usp=sharing"><button class="project-button">View the List</button></a>
 </div>
 <div class="our-projects">
 <h3 class="heading" style="margin: 0 0 0 -1em">Rate My Prof</h3>
-<button class="project-button">Submit a Rating</button>
+<a href="https://forms.gle/QVCJopWvhA7VgPZ49"><button class="project-button">Submit a Rating</button></a>
 <button class="project-button">View the List</button>
 </div>
 <h2 class="heading">Meeting Content</h2>
 <!--embed videos and articles from 2019-2020 list here-->
+<div class="ted-embed js-flickity">
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/reshma_saujani_teach_girls_bravery_not_perfection" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/katie_bouman_how_to_take_a_picture_of_a_black_hole" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lisa_seacat_deluca_a_vision_of_the_future_from_ibm_s_most_prolific_inventor" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/ayanna_howard_why_we_need_to_build_robots_we_can_trust" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/robin_hauser_can_we_protect_ai_from_our_biases" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/jamie_paik_origami_robots_that_reshape_and_transform_themselves" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/simone_giertz_why_you_should_make_useless_things" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+</div>
 </div>
 
 <div id="about">
@@ -83,10 +93,11 @@
 
 <div id="join">
 <h2 class="heading">Join Our Chapter</h2>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1oBEudjJOaS5L62UwJtSnYrXQm6RmpiUFJUBTYsPzDJyhYA/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 </body>
 
 <footer>
-coded with <3 by acm-w
+coded with &lt;3 by acm-w
 </footer>
 </html>
