styling and scaling new links

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" type="text/css" href="styles/stylesheet.css">
+  <script src="https://kit.fontawesome.com/1e455ca5c4.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
 <title>ACM-W at UD</title>
