--- a/index.html
+++ b/index.html
@@ -19,18 +19,24 @@
   </div>
 </nav>
 
+<section>
 <div id="events">
 <h2 class="heading">Upcoming Events</h2>
 <!--embed Google Calendar here-->
+<iframe src="https://calendar.google.com/calendar/embed?src=udel.edu_erj252n7a78beigj83nfjf4pt4%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 </div>
+</section>
 
+<section>
 <div id="mentorship">
 <h2 class="heading">Support for the Women in Tech at UD</h2>
 <p>Our chapter has designed a mentorship program to support women in tech-driven majors at the University of Delaware. We generally cater to Computer Science, Information Systems, and Management Information Systems Majors, but we encourage anyone who is interested to apply. Upperclassmen in this program mentor a freshman in their major, give them academic advice, and help them adjust to life at UD during their first year. This program is part of an initiative to create a safe and supportive space for the women in tech at UD and increase retention of our female students in technical majors.</p>
 <a href="https://forms.gle/qBjEBZUMLRzHdqJU7"><button class="mentor-button">Get a Mentor</button></a>
 <a href="https://forms.gle/nYj4bWPKAvMkZmGBA"><button class="mentor-button">Become a Mentor</button></a>
 </div>
+</section>
 
+<section>
 <div id="resources">
 <h2 class="heading">Our Projects</h2>
 <div class="our-projects">
@@ -55,29 +61,30 @@
 <div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/simone_giertz_why_you_should_make_useless_things" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
 </div>
 </div>
+</section>
 
+<section>
 <div id="about">
 <h2 class="heading">2020-2021 Executive Board</h2>
 
 <div id="exec-board">
 <div id="chair">
-<!--the headshot id will be changed from a box to an image later-->
-<div id="headshot"></div>
+<div id="headshot"><img src="pictures/sarah.JPG"></div>
 <h3 class="heading">Sarah Joyce</h3><h4 class="heading">Chair</h4>
 </div>
 
 <div id="vice-chair">
-<div id="headshot"></div>
+<div id="headshot"><img src="pictures/bonnie.jpeg"></div>
 <h3 class="heading">Bonnie Skiena</h3><h4 class="heading">Vice Chair</h4>
 </div>
 
 <div id="treasurer">
-<div id="headshot"></div>
+<div id="headshot"><img src="pictures/carrie.jpg"></div>
 <h3 class="heading">Caroline Graham</h3><h4 class="heading">Treasurer</h4>
 </div>
 
 <div id="mentor-coordinator">
-<div id="headshot"></div>
+<div id="headshot"><img src="pictures/erin.jpg"></div>
 <h3 class="heading">Erin Wallace</h3><h4 class="heading">Mentorship Program Coordinator</h4>
 </div>
 </div>
@@ -91,12 +98,15 @@
 <div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
 </div>
 </div>
+</section>
 
+<section>
 <div id="join">
 <h2 class="heading">Join Our Chapter</h2>
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1oBEudjJOaS5L62UwJtSnYrXQm6RmpiUFJUBTYsPzDJyhYA/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
 </body>
+</section>
 
 <footer>
 coded with &lt;3 by acm-w
