finished with links, some styling and scaling still needed

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 <h2 class="heading">Meeting Content</h2>
 <!--embed videos and articles from 2019-2020 list here-->
 <div class="ted-embed js-flickity">
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/reshma_saujani_teach_girls_bravery_not_perfection" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/katie_bouman_how_to_take_a_picture_of_a_black_hole" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lisa_seacat_deluca_a_vision_of_the_future_from_ibm_s_most_prolific_inventor" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/ayanna_howard_why_we_need_to_build_robots_we_can_trust" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/robin_hauser_can_we_protect_ai_from_our_biases" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/jamie_paik_origami_robots_that_reshape_and_transform_themselves" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/simone_giertz_why_you_should_make_useless_things" width="854" height="480" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/reshma_saujani_teach_girls_bravery_not_perfection" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/katie_bouman_how_to_take_a_picture_of_a_black_hole" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lisa_seacat_deluca_a_vision_of_the_future_from_ibm_s_most_prolific_inventor" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/ayanna_howard_why_we_need_to_build_robots_we_can_trust" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/robin_hauser_can_we_protect_ai_from_our_biases" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/jamie_paik_origami_robots_that_reshape_and_transform_themselves" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/simone_giertz_why_you_should_make_useless_things" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
 </div>
 </div>
 </section>
@@ -69,23 +69,43 @@
 
 <div id="exec-board">
 <div id="chair">
-<div id="headshot"><img src="pictures/sarah.JPG"></div>
-<h3 class="heading">Sarah Joyce</h3><h4 class="heading">Chair</h4>
+<div id="headshot"><img src="pictures/sarah.jpg"></div>
+<h3 class="heading">Sarah Joyce</h3>
+<h4 class="heading">Chair</h4>
+<div id="exec-buttons">
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+</div>
 </div>
 
 <div id="vice-chair">
-<div id="headshot"><img src="pictures/bonnie.jpeg"></div>
-<h3 class="heading">Bonnie Skiena</h3><h4 class="heading">Vice Chair</h4>
+<div id="headshot"><img src="pictures/bonnie.jpg"></div>
+<h3 class="heading">Bonnie Skiena</h3>
+<h4 class="heading">Vice Chair</h4>
+<div id="exec-buttons">
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+</div>
 </div>
 
 <div id="treasurer">
 <div id="headshot"><img src="pictures/carrie.jpg"></div>
-<h3 class="heading">Caroline Graham</h3><h4 class="heading">Treasurer</h4>
+<h3 class="heading">Caroline Graham</h3>
+<h4 class="heading">Treasurer</h4>
+<div id="exec-buttons">
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+</div>
 </div>
 
 <div id="mentor-coordinator">
 <div id="headshot"><img src="pictures/erin.jpg"></div>
-<h3 class="heading">Erin Wallace</h3><h4 class="heading">Mentorship Program Coordinator</h4>
+<h3 class="heading">Erin Wallace</h3>
+<h4 class="heading">Mentorship Program Coordinator</h4>
+<div id="exec-buttons">
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+</div>
 </div>
 </div>
 
@@ -93,9 +113,17 @@
 <h2 class="heading">Website Contributors</h2>
 <!--note: the icons I am using are called fontawesome icons. The fa-2x class in the class tag changes the size of the icon.-->
 <div id="programmer-buttons">
-<div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-<div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
-<div id="programmer"><h3>Name Here</h3><a id="profile-link" href="https://github.com/SarahJoyce" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></div>
+<div id="programmer"><h3>Name Here</h3>
+  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+</div>
+<div id="programmer"><h3>Name Here</h3>
+  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+</div>
+<div id="programmer"><h3>Name Here</h3>
+  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
+  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
 </div>
 </div>
 </section>
