--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 <h2 class="heading">Meeting Content</h2>
 <!--embed videos and articles from 2019-2020 list here-->
 <div class="ted-embed js-flickity">
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/reshma_saujani_teach_girls_bravery_not_perfection" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/katie_bouman_how_to_take_a_picture_of_a_black_hole" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lisa_seacat_deluca_a_vision_of_the_future_from_ibm_s_most_prolific_inventor" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/ayanna_howard_why_we_need_to_build_robots_we_can_trust" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/robin_hauser_can_we_protect_ai_from_our_biases" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/jamie_paik_origami_robots_that_reshape_and_transform_themselves" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
-<div class="ted-cell" style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://embed.ted.com/talks/lang/en/simone_giertz_why_you_should_make_useless_things" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell"><iframe src="https://embed.ted.com/talks/lang/en/reshma_saujani_teach_girls_bravery_not_perfection" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell"><iframe src="https://embed.ted.com/talks/katie_bouman_how_to_take_a_picture_of_a_black_hole" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell"><iframe src="https://embed.ted.com/talks/lisa_seacat_deluca_a_vision_of_the_future_from_ibm_s_most_prolific_inventor" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell"><iframe src="https://embed.ted.com/talks/ayanna_howard_why_we_need_to_build_robots_we_can_trust" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell"><iframe src="https://embed.ted.com/talks/robin_hauser_can_we_protect_ai_from_our_biases" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell"><iframe src="https://embed.ted.com/talks/jamie_paik_origami_robots_that_reshape_and_transform_themselves" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+<div class="ted-cell"><iframe src="https://embed.ted.com/talks/lang/en/simone_giertz_why_you_should_make_useless_things" style="position:absolute;left:0;top:0;width:100%;height:100%" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
 </div>
 </div>
 </section>
