fixed some spacing and styling

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
 <nav>
-  <div id="name">acm-w @ UD</div><div id="options">
+  <div id="name" style="float:left;">acm-w @ UD</div><div id="options" style="float:right; text-align: right; padding-right: 1%;">
   <a href="#events">events</a> | <a href="#mentorship">mentorship</a> | <a href="#resources">resources</a> | <a href="#about">about</a> | <a href="#join">join us</a>
   </div>
 </nav>
@@ -131,12 +131,12 @@
 <section>
 <div id="join">
 <h2 class="heading">Join Our Chapter</h2>
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1oBEudjJOaS5L62UwJtSnYrXQm6RmpiUFJUBTYsPzDJyhYA/viewform?embedded=true" width="640" height="812" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf1oBEudjJOaS5L62UwJtSnYrXQm6RmpiUFJUBTYsPzDJyhYA/viewform?embedded=true" width="50%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
 </div>
-</body>
 </section>
+</body>
 
 <footer>
-coded with &lt;3 by acm-w
+coded with &lt;3 by acm-w @ UD
 </footer>
 </html>
