updated links, began bootstrap additions

--- a/index.html
+++ b/index.html
@@ -9,13 +9,38 @@
   <script src="https://kit.fontawesome.com/1e455ca5c4.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 <title>ACM-W at UD</title>
 </head>
 
 <body>
-<nav>
-  <div id="name" style="float:left;">acm-w @ UD</div><div id="options" style="float:right; text-align: right; padding-right: 1%;">
-  <a href="#events">events</a> | <a href="#mentorship">mentorship</a> | <a href="#resources">resources</a> | <a href="#about">about</a> | <a href="#join">join us</a>
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0069AA;color:#FFFFFF;">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">acm-w @ UD</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" href="#events">events</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#mentorship">mentorship</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#resources">resources</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#about">about</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="#join">join us</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
@@ -28,17 +53,13 @@
 </section>
 
 <section>
-<div id="mentorship">
-<h2 class="heading">Support for the Women in Tech at UD</h2>
-<p>Our chapter has designed a mentorship program to support women in tech-driven majors at the University of Delaware. We generally cater to Computer Science, Information Systems, and Management Information Systems Majors, but we encourage anyone who is interested to apply. Upperclassmen in this program mentor a freshman in their major, give them academic advice, and help them adjust to life at UD during their first year. This program is part of an initiative to create a safe and supportive space for the women in tech at UD and increase retention of our female students in technical majors.</p>
-<a href="https://forms.gle/qBjEBZUMLRzHdqJU7"><button class="mentor-button">Get a Mentor</button></a>
-<a href="https://forms.gle/nYj4bWPKAvMkZmGBA"><button class="mentor-button">Become a Mentor</button></a>
-</div>
-</section>
-
-<section>
 <div id="resources">
 <h2 class="heading">Our Projects</h2>
+<div class="our-projects">
+<h3 class="heading">Mentorship Program</h3>
+<a href="https://forms.gle/qBjEBZUMLRzHdqJU7"><button class="project-button">Get A Mentor</button></a>
+<a href="https://forms.gle/nYj4bWPKAvMkZmGBA"><button class="project-button">Become A Mentor</button></a>
+</div>
 <div class="our-projects">
 <h3 class="heading">WIT Media</h3>
 <a href="https://forms.gle/j3pQkT7xai8doqMMA"><button class="project-button">Submit Media</button></a>
