--- a/index.html
+++ b/index.html
@@ -54,22 +54,26 @@
 
 <section>
 <div id="resources">
+
 <h2 class="heading">Our Projects</h2>
+<div id="projects">
 <div class="our-projects">
 <h3 class="heading">Mentorship Program</h3>
-<a href="https://forms.gle/qBjEBZUMLRzHdqJU7"><button class="project-button">Get A Mentor</button></a>
-<a href="https://forms.gle/nYj4bWPKAvMkZmGBA"><button class="project-button">Become A Mentor</button></a>
+<a href="https://forms.gle/qBjEBZUMLRzHdqJU7"><button class="btn btn-light">Get A Mentor</button></a>
+<a href="https://forms.gle/nYj4bWPKAvMkZmGBA"><button class="btn btn-light">Become A Mentor</button></a>
 </div>
 <div class="our-projects">
 <h3 class="heading">WIT Media</h3>
-<a href="https://forms.gle/j3pQkT7xai8doqMMA"><button class="project-button">Submit Media</button></a>
-<a href="https://docs.google.com/document/d/1VVrZybqxFiXfx4ktajbqoNahKZui108HwzNN2uQ_kk8/edit?usp=sharing"><button class="project-button">View the List</button></a>
+<a href="https://forms.gle/j3pQkT7xai8doqMMA"><button class="btn btn-light">Submit Media</button></a>
+<a href="https://docs.google.com/document/d/1VVrZybqxFiXfx4ktajbqoNahKZui108HwzNN2uQ_kk8/edit?usp=sharing"><button class="btn btn-light">View the List</button></a>
 </div>
 <div class="our-projects">
 <h3 class="heading" style="margin: 0 0 0 -1em">Rate My Prof</h3>
-<a href="https://forms.gle/QVCJopWvhA7VgPZ49"><button class="project-button">Submit a Rating</button></a>
-<button class="project-button">View the List</button>
+<a href="https://forms.gle/QVCJopWvhA7VgPZ49"><button class="btn btn-light">Submit a Rating</button></a>
+<button class="btn btn-light">View the List</button>
 </div>
+</div>
+
 <h2 class="heading">Meeting Content</h2>
 <!--embed videos and articles from 2019-2020 list here-->
 <div class="ted-embed js-flickity">
@@ -88,45 +92,49 @@
 <div id="about">
 <h2 class="heading">2020-2021 Executive Board</h2>
 
-<div id="exec-board">
-<div id="chair">
-<div id="headshot"><img src="pictures/sarah.jpg"></div>
-<h3 class="heading">Sarah Joyce</h3>
-<h4 class="heading">Chair</h4>
-<div id="exec-buttons">
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-</div>
-</div>
-
-<div id="vice-chair">
-<div id="headshot"><img src="pictures/bonnie.jpg"></div>
-<h3 class="heading">Bonnie Skiena</h3>
-<h4 class="heading">Vice Chair</h4>
-<div id="exec-buttons">
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-</div>
+<div id ="execs">
+<div class="card" style="width: 20%;">
+  <img src="pictures/sarah.jpg" class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">Sarah Joyce</h5>
+    <p class="card-text">Chair</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+  </ul>
 </div>
 
-<div id="treasurer">
-<div id="headshot"><img src="pictures/carrie.jpg"></div>
-<h3 class="heading">Caroline Graham</h3>
-<h4 class="heading">Treasurer</h4>
-<div id="exec-buttons">
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-</div>
+<div class="card" style="width: 20%;">
+  <img src="pictures/bonnie.jpg" class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">Bonnie Skiena</h5>
+    <p class="card-text">Vice Chair</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+  </ul>
 </div>
 
-<div id="mentor-coordinator">
-<div id="headshot"><img src="pictures/erin.jpg"></div>
-<h3 class="heading">Erin Wallace</h3>
-<h4 class="heading">Mentorship Program Coordinator</h4>
-<div id="exec-buttons">
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-<a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
+<div class="card" style="width: 20%;">
+  <img src="pictures/carrie.jpg" class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">Caroline Graham</h5>
+    <p class="card-text">Treasurer</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+  </ul>
 </div>
+
+<div class="card" style="width: 20%;">
+  <img src="pictures/erin.jpg" class="card-img-top">
+  <div class="card-body">
+    <h5 class="card-title">Erin Wallace</h5>
+    <p class="card-text">Mentor Coordinator</p>
+  </div>
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item"><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
+  </ul>
 </div>
 </div>
 
@@ -158,6 +166,12 @@
 </body>
 
 <footer>
-coded with &lt;3 by acm-w @ UD
+  <nav class="navbar navbar-light py-0" style="background-color: #c4c4c4;color: #FFFFFF;">
+    <div class="container-fluid justify-content-center">
+      <a class="navbar-brand" style="color: #FFFFFF;">coded w/ &lt;3 by acm-w @ UD</a>
+      <a href="#" target="_blank" style="text-decoration: none; margin-right: 1%; color:#FFFFFF;"><i class="far fa-envelope"></i></a>
+      <a href="#" target="_blank" style="text-decoration: none; color:#FFFFFF;"><i class="fab fa-instagram"></i></a>
+    </div>
+  </nav>
 </footer>
 </html>
