updated cards for board and contributors

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#0069AA;color:#FFFFFF;">
+<nav class="navbar navbar-expand-lg navbar-dark py-0" style="background-color:#0069AA;color:#FFFFFF;">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">acm-w @ UD</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -142,18 +142,26 @@
 <h2 class="heading">Website Contributors</h2>
 <!--note: the icons I am using are called fontawesome icons. The fa-2x class in the class tag changes the size of the icon.-->
 <div id="programmer-buttons">
-<div id="programmer"><h3>Name Here</h3>
-  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-</div>
-<div id="programmer"><h3>Name Here</h3>
-  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-</div>
-<div id="programmer"><h3>Name Here</h3>
-  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a>
-  <a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a>
-</div>
+  <div class="card" style="width: 25%;">
+    <div class="card-body">
+      <h5 class="card-title">Name Here</h5>
+      <p class="card-text"><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 25%;">
+    <div class="card-body">
+      <h5 class="card-title">Name Here</h5>
+      <p class="card-text"><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></p>
+    </div>
+  </div>
+
+  <div class="card" style="width: 25%;">
+    <div class="card-body">
+      <h5 class="card-title">Name Here</h5>
+      <p class="card-text"><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></p>
+    </div>
+  </div>
 </div>
 </section>
 
