added footer icons

--- a/index.html
+++ b/index.html
@@ -172,10 +172,15 @@
 
 <footer>
   <nav class="navbar navbar-light py-0" style="background-color: #c4c4c4;color: #FFFFFF;">
-    <div class="container-fluid justify-content-center">
+    <div id="footer" class="container-fluid justify-content-center">
+      <div>
       <a class="navbar-brand" style="color: #FFFFFF;">coded w/ &lt;3 by acm-w @ UD</a>
-      <a href="#" target="_blank" style="text-decoration: none; margin-right: 1%; color:#FFFFFF;"><i class="far fa-envelope"></i></a>
-      <a href="#" target="_blank" style="text-decoration: none; color:#FFFFFF;"><i class="fab fa-instagram"></i></a>
+      </div>
+      <div id="icons">
+      <a href="mailto:acmwud@gmail.com" target="_blank" style="text-decoration: none; margin-right: 1%; color:#FFFFFF;"><i class="far fa-envelope"></i></a>
+      <a href="https://www.instagram.com/acmwud/" target="_blank" style="text-decoration: none; margin-right: 1%; color:#FFFFFF;"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.linkedin.com/groups/8936004/" target="_blank" style="text-decoration: none; color:#FFFFFF;"><i class="fab fa-linkedin"></i></a>
+      </div>
     </div>
   </nav>
 </footer>
