added logo to navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark py-1" style="background-color:#0069AA;color:#FFFFFF;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">acm-w @ UD</a>
+    <a class="navbar-brand" href="#"><img id="logo" src="pictures/acmwlogo.jpg"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -133,32 +133,6 @@
     <li class="list-group-item"><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default exec-button" target="_blank"><i class="fab fa-github fa-2x"></i></a></li>
   </ul>
 </div>
-</div>
-
-<div id="contributors">
-<h2 class="heading">Website Contributors</h2>
-<!--note: the icons I am using are called fontawesome icons. The fa-2x class in the class tag changes the size of the icon.-->
-<div id="programmer-buttons">
-  <div class="card" style="width: 25%;">
-    <div class="card-body">
-      <h5 class="card-title">Name Here</h5>
-      <p class="card-text"><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></p>
-    </div>
-  </div>
-
-  <div class="card" style="width: 25%;">
-    <div class="card-body">
-      <h5 class="card-title">Name Here</h5>
-      <p class="card-text"><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></p>
-    </div>
-  </div>
-
-  <div class="card" style="width: 25%;">
-    <div class="card-body">
-      <h5 class="card-title">Name Here</h5>
-      <p class="card-text"><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-linkedin fa-2x"></i></a><a id="profile-link" href="#" class="btn btn-default" target="_blank"><i class="fab fa-github fa-2x"></i></a></p>
-    </div>
-  </div>
 </div>
 </section>
 
